k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: today-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: today-client
  template:
    metadata:
      labels:
        app: today-client
    spec:
      containers:
        - name: today-client
          image: sherondale/today-client
          ports:
            - containerPort: 3000
