k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: today-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: today-server
  template:
    metadata:
      labels:
        app: today-server
    spec:
      containers:
        - name: today-server
          image: sherondale/today-server
          ports:
            - containerPort: 5000
