k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - today.sherondale.me
      secretName: today-sherondale-me
  rules:
    - host: today.sherondale.me
      http:
        paths:
          - path: /
            backend:
              serviceName: today-client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: today-server-cluster-ip-service
              servicePort: 5000
